--- a/index.html
+++ b/index.html
@@ -9,6 +9,257 @@
   </head>
 
   <body>
-    <script src="app/js/main.min.js"></script>
+    <header class="header">
+      <div class="container">
+        <h1 class="header__title">E-COMMERCE</h1>
+        <span class="header__span">СТАРТ</span>
+        <p class="header__desc">
+          Запусти свой онлайн бизнес без привязки к месту с минимальными
+          вложениями
+        </p>
+        <div class="header-promo">
+          <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
+             <img
+            class="header-promo__img"
+            src="./app/images/header-promo/1.png"
+            alt="photo card"
+          />
+          </a>
+          <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
+            <img
+           class="header-promo__img"
+           src="./app/images/header-promo/2.png"
+           alt="photo card"
+         />
+         </a>
+         <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
+          <img
+         class="header-promo__img"
+         src="./app/images/header-promo/3.png"
+         alt="photo card"
+       />
+       </a>
+       <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
+        <img
+       class="header-promo__img"
+       src="./app/images/header-promo/4.png"
+       alt="photo card"
+     />
+     </a>
+     <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
+      <img
+     class="header-promo__img"
+     src="./app/images/header-promo/5.png"
+     alt="photo card"
+   />
+   </a>
+   <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
+    <img
+   class="header-promo__img"
+   src="./app/images/header-promo/6.png"
+   alt="photo card"
+ />
+ </a>
+        </div>
+        <div class="header-info">
+          <div class="header-info__order">
+            <img src="./app/images/book.png" alt="book" />
+            <p class="header-info__order-text">
+              Я подготовил <span>ОООчень </span> крутые бесплатные материалы,
+              чтобы вы смогли научиться стабильно
+              <span>зарабатывать 1000$</span> в месяц
+              <button class="header-info__order-btn">
+                ЗАБРАТЬ КУРС И ГАЙД
+              </button>
+            </p>
+          </div>
+
+          <div class="header-info__social">
+            <img
+              class="header-info__social-img"
+              src="./app/images/info-tich.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </header>
+    <section class="info">
+      <div class="container">
+        <div class="info__inner">
+          <div class="info__item">
+            <img class="info__item-img" src="./app/images/info/1.png" alt="" />
+            <div class="info__item-wrapper">
+              <p class="info__item-text">
+                Поймете какие вложения нужны на старте
+              </p>
+            </div>
+          </div>
+          <div class="info__item">
+            <img class="info__item-img" src="./app/images/info/2.png" alt="" />
+            <div class="info__item-wrapper">
+              <p class="info__item-text">Сколько сможете зарабатывать</p>
+            </div>
+          </div>
+          <div class="info__item">
+            <img class="info__item-img" src="./app/images/info/3.png" alt="" />
+            <div class="info__item-wrapper">
+              <p class="info__item-text">
+                Узнаете как выбрать товар, который будет продаваться
+              </p>
+            </div>
+          </div>
+          <div class="info__item">
+            <img class="info__item-img" src="./app/images/info/4.png" alt="" />
+            <div class="info__item-wrapper">
+              <p class="info__item-text">
+                Каким должен быть ваш магазин в интернете
+              </p>
+            </div>
+          </div>
+          <div class="info__item">
+            <img class="info__item-img" src="./app/images/info/5.png" alt="" />
+            <div class="info__item-wrapper">
+              <p class="info__item-text">
+                Как и где запустить рекламу, чтобы получать прибыль
+              </p>
+            </div>
+          </div>
+          <div class="info__item">
+            <img class="info__item-img" src="./app/images/info/6.png" alt="" />
+            <div class="info__item-wrapper">
+              <p class="info__item-text">
+                Какие цифры и как считать чтобы работать в "+"
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="video">
+      <div class="container">
+      <div class="video__inner">
+        <h2 class="video__title">Посмотрите как запустить прибыльный бизнес всего за пару часов и вложив 200$  <span>заработать 100$</span></h2>
+        <div class="video__popup" style="background-image: url('./app/images/video.png');">
+          <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
+            <img src="./app/images/play.png " alt="video play butoon">
+          </a>
+        </div>
+        <button class="video__btn">НАУЧИТЬСЯ ДЕЛАТЬ ТАКЖЕ</button>
+      </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="author">
+     <div class="container">
+      <div class="author__inner">
+        <div class="author-info">
+          <div class="author-info__top">
+            <h2 class="author-info__top-title">АВТОР КУРСА</h2>
+            <span>Дмитрий Будилович</span>
+          </div>
+          <ul class="author-info__desc">
+            <li class="author-info__item">Эксперт в онлайн-продажах товаров, услуг, обучающих продуктов</li>
+            <li class="author-info__item">Более 1000 запущенных товаров</li>
+            <li class="author-info__item">Более 300000$ собственноручно открученного рекламного бюджета за все время работы</li>
+            <li class="author-info__item">Действующий продавец товаров в РБ</li>
+            <li class="author-info__item">Действующий продавец товара на WB</li>
+            <li class="author-info__item">Организатор и спикер офлайн-форумов "Товарный бизнес"</li>
+            <li class="author-info__item">31452 заказов за 2021 год, 310к$ оборот товарного бизнеса за предыдущий год с рентабельностью 28%</li>
+            <li class="author-info__item">Автор и наставник обучения по запуску<br> бизнеса "E-commerce. Evolution"</li>
+          </ul>
+        <button class="author__btn">НАУЧИТЬСЯ ДЕЛАТЬ ТАКЖЕ</button>
+        </div>
+        <div class="author-card">
+          <img class="author-card__img" src="./app/images/author/1.png" alt="author" >
+          <img class="author-card__img" src="./app/images/author/2.png" alt="author" >
+          <img class="author-card__img" src="./app/images/author/3.png" alt="author" >
+        </div>
+      </div>
+     </div>
+    </section>
+    
+    <section class="description">
+     <div class="container">
+      <div class="description__inner">
+       <div class="description__item-one"> <p > Забрав курс вы попадаете в комьюнинити людей занятых в E-commerce бизнесе</p></div>
+       <div class="description__item-two"> <p > В сообществе мы обмениваемся информацией, помогаем друг другу, поддерживаем и делимся ресурсами. Чтобы вместе достигать намеченных целей быстрее</p></div>
+      <div class="description__item-three"> <p > Это увлеченные люди. Эксперты и предпринимматели, ничинающие и опытные!</p></div>
+      </div>
+      <div class="gallery">
+        <div class="gallery__item">
+        <img class="gallery__item-img" src="./app/images/gallery/1.png" alt="photo" >
+        <img class="gallery__item-img" src="./app/images/gallery/2.png" alt="photo" >
+        <img class="gallery__item-img" src="./app/images/gallery/3.png" alt="photo" >
+        </div>
+        <div class="gallery__item">
+        <img class="gallery__item-img" src="./app/images/gallery/4.png" alt="photo" >
+        <img class="gallery__item-img" src="./app/images/gallery/5.png" alt="photo" >
+        </div>
+        <div class="gallery__item">
+        <img class="gallery__item-img" src="./app/images/gallery/6.png" alt="photo" >
+        <img class="gallery__item-img" src="./app/images/gallery/7.png" alt="photo" >
+        <img class="gallery__item-img" src="./app/images/gallery/8.png" alt="photo" >
+        </div>
+       </div>
+       <button class="gallery__btn">ЗАБРАТЬ КУРС И СТАТЬ ЧАСТЬЮ СООБЩЕСТВА</button>
+     </div>
+    </section>
+    <section class="suppliers">
+      <div class="container">
+        <div class="suppliers__inner">
+          <div class="suppliers__item">
+            <p class="suppliers__sub-title">Также вы сможете получить</p>
+            <h2 class="suppliers__title">БАЗУ ПОСТАВЩИКОВ</h2>
+            <ul class="suppliers__list">
+              <li class="suppliers__list-item"><span>3 459</span> официальных поставщиков Беларуси</li>
+              <li class="suppliers__list-item"><span>30 243</span> товарные ниши</li>
+              <li class="suppliers__list-item"><span>212</span> поставщиков с рынка Экспобел</li>
+              <li class="suppliers__list-item"><span>5 475</span> поставщиков с российских рынков</li>
+            </ul>
+           <button class="suppliers__btn"> <img src="./app/images/Vector.svg" alt="Telegram"> ЗАБРАТЬ БАЗУ ПОСТАВЩИКОВ</button>
+          </div>
+          <div class="suppliers__item">
+            <img src="./app/images/phone.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contacts">
+      <div class="container">
+        <h2 class="contacts__title">Напиши слово <span>"Старт"</span> мне в instagram и Я отправлю тебе все материалы в Direct</h2>
+      <button class="contacts__btn"><img src="./app/images/Vector.svg" alt="Telegram">ПОЛУЧИТЬ ССЫЛКИ НА СОЦ. СЕТИ</button>
+      </div>
+    </section>
+     <div class="modal">
+      <form class="modal__form" action="#">
+        <span class="modal__form-closet">X</span>
+        <p class="modal__form-title"></p>
+        <div class="modal__form-input-box">
+          <input class="modal__form-input" type="text" placeholder="Имя">
+          <input class="modal__form-input" type="text" placeholder="Ник в Telegram">
+          <input class="modal__form-input" type="text" placeholder="Email">
+          <input class="modal__form-input" type="text" placeholder="Телефон">
+        </div>
+        <button class="modal__form-btn" type="submit"></button>
+        <div class="modal__form-info">
+          <input class="modal__form-checkbox" type="checkbox">
+          <p>Я согласен на обработку моих персональных данных в соответствии с Условиями и Договором оферты</p>
+        </div>
+      </form>
+     </div>
+
+    <div class="modal-ok">
+      <div class="modal-ok__inner">
+        <div class="modal-ok__block">
+          <h2 class="modal-ok__title">СПАСИБО!</h2>
+          <p class=>Ваша заявка принята </p>
+        </div>
+        <p>В ближайшее время мы отправим все материалы на указанную вами почту</p>
+       </div>
+    </div>
+
+    <script src="app/js/main.min.js" type="module"></script>
   </body>
 </html>
