--- a/index.html
+++ b/index.html
@@ -18,48 +18,66 @@
           вложениями
         </p>
         <div class="header-promo">
-          <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
-             <img
-            class="header-promo__img"
-            src="./app/images/header-promo/1.png"
-            alt="photo card"
-          />
-          </a>
-          <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
+          <a
+            data-fancybox
+            href="https://youtu.be/2eWmGuqNkr0"
+          >
             <img
-           class="header-promo__img"
-           src="./app/images/header-promo/2.png"
-           alt="photo card"
-         />
-         </a>
-         <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
-          <img
-         class="header-promo__img"
-         src="./app/images/header-promo/3.png"
-         alt="photo card"
-       />
-       </a>
-       <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
-        <img
-       class="header-promo__img"
-       src="./app/images/header-promo/4.png"
-       alt="photo card"
-     />
-     </a>
-     <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
-      <img
-     class="header-promo__img"
-     src="./app/images/header-promo/5.png"
-     alt="photo card"
-   />
-   </a>
-   <a class="video__play" data-fancybox href='https://youtu.be/2eWmGuqNkr0'>
-    <img
-   class="header-promo__img"
-   src="./app/images/header-promo/6.png"
-   alt="photo card"
- />
- </a>
+              class="header-promo__img"
+              src="./app/images/header-promo/1.png"
+              alt="photo card"
+            />
+          </a>
+          <a
+            data-fancybox
+            href="https://youtu.be/2eWmGuqNkr0"
+          >
+            <img
+              class="header-promo__img"
+              src="./app/images/header-promo/2.png"
+              alt="photo card"
+            />
+          </a>
+          <a
+            data-fancybox
+            href="https://youtu.be/2eWmGuqNkr0"
+          >
+            <img
+              class="header-promo__img"
+              src="./app/images/header-promo/3.png"
+              alt="photo card"
+            />
+          </a>
+          <a
+            data-fancybox
+            href="https://youtu.be/2eWmGuqNkr0"
+          >
+            <img
+              class="header-promo__img"
+              src="./app/images/header-promo/4.png"
+              alt="photo card"
+            />
+          </a>
+          <a
+            data-fancybox
+            href="https://youtu.be/2eWmGuqNkr0"
+          >
+            <img
+              class="header-promo__img"
+              src="./app/images/header-promo/5.png"
+              alt="photo card"
+            />
+          </a>
+          <a
+            data-fancybox
+            href="https://youtu.be/2eWmGuqNkr0"
+          >
+            <img
+              class="header-promo__img"
+              src="./app/images/header-promo/6.png"
+              alt="photo card"
+            />
+          </a>
         </div>
         <div class="header-info">
           <div class="header-info__order">
@@ -73,7 +91,6 @@
               </button>
             </p>
           </div>
-
           <div class="header-info__social">
             <img
               class="header-info__social-img"
@@ -84,7 +101,7 @@
         </div>
       </div>
     </header>
-    <section class="info">
+     <section class="info">
       <div class="container">
         <div class="info__inner">
           <div class="info__item">
@@ -153,12 +170,12 @@
 
     <section class="author">
      <div class="container">
+      <div class="author-info__top">
+        <h2 class="author-info__top-title">АВТОР КУРСА</h2>
+        <span>Дмитрий Будилович</span>
+      </div>
       <div class="author__inner">
-        <div class="author-info">
-          <div class="author-info__top">
-            <h2 class="author-info__top-title">АВТОР КУРСА</h2>
-            <span>Дмитрий Будилович</span>
-          </div>
+        <div class="author-info child-active">
           <ul class="author-info__desc">
             <li class="author-info__item">Эксперт в онлайн-продажах товаров, услуг, обучающих продуктов</li>
             <li class="author-info__item">Более 1000 запущенных товаров</li>
@@ -169,7 +186,7 @@
             <li class="author-info__item">31452 заказов за 2021 год, 310к$ оборот товарного бизнеса за предыдущий год с рентабельностью 28%</li>
             <li class="author-info__item">Автор и наставник обучения по запуску<br> бизнеса "E-commerce. Evolution"</li>
           </ul>
-        <button class="author__btn">НАУЧИТЬСЯ ДЕЛАТЬ ТАКЖЕ</button>
+        <button class="author__btn">ЗАБРАТЬ КУРС И ПОЗНАКОМИТЬСЯ</button>
         </div>
         <div class="author-card">
           <img class="author-card__img" src="./app/images/author/1.png" alt="author" >
@@ -184,8 +201,8 @@
      <div class="container">
       <div class="description__inner">
        <div class="description__item-one"> <p > Забрав курс вы попадаете в комьюнинити людей занятых в E-commerce бизнесе</p></div>
-       <div class="description__item-two"> <p > В сообществе мы обмениваемся информацией, помогаем друг другу, поддерживаем и делимся ресурсами. Чтобы вместе достигать намеченных целей быстрее</p></div>
       <div class="description__item-three"> <p > Это увлеченные люди. Эксперты и предпринимматели, ничинающие и опытные!</p></div>
+      <div class="description__item-two"> <p > В сообществе мы обмениваемся информацией, помогаем друг другу, поддерживаем и делимся ресурсами. Чтобы вместе достигать намеченных целей быстрее</p></div>
       </div>
       <div class="gallery">
         <div class="gallery__item">
@@ -218,12 +235,13 @@
               <li class="suppliers__list-item"><span>212</span> поставщиков с рынка Экспобел</li>
               <li class="suppliers__list-item"><span>5 475</span> поставщиков с российских рынков</li>
             </ul>
-           <button class="suppliers__btn"> <img src="./app/images/Vector.svg" alt="Telegram"> ЗАБРАТЬ БАЗУ ПОСТАВЩИКОВ</button>
           </div>
           <div class="suppliers__item">
             <img src="./app/images/phone.png" alt="">
           </div>
         </div>
+        <button class="suppliers__btn"> <img src="./app/images/Vector.svg" alt="Telegram"> ЗАБРАТЬ БАЗУ ПОСТАВЩИКОВ</button>
+
       </div>
     </section>
     <section class="contacts">
@@ -258,7 +276,7 @@
         </div>
         <p>В ближайшее время мы отправим все материалы на указанную вами почту</p>
        </div>
-    </div>
+    </div> 
 
     <script src="app/js/main.min.js" type="module"></script>
   </body>
