--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     </section>
     <div class="modal">
       <form class="modal__form" action="#">
-        <span class="modal__form-closet">X</span>
+        <span class="modal__form-closet">x</span>
         <p class="modal__form-title"></p>
         <div class="modal__form-input-box">
           <input class="modal__form-input" type="text" placeholder="Имя" />
