--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             placeholder="Телефон"
           />
         </div>
-        <button class="modal__form-btn" type="submit"></button>
+        <input class="modal__form-btn" type="submit"></input>
         <div class="modal__form-info">
           <input class="modal__form-checkbox" type="checkbox" />
           <p>
