--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       </div>
     </section>
     <div class="modal">
-      <form class="modal__form" action="send.php" method="post">
+      <form class="modal__form">
         <!-- Hidden Required Fields -->
         <input type="hidden" name="project_name" value="E-COMMERCE" />
         <input type="hidden" name="admin_email" value="bob1_k@mail.ru" />
@@ -374,7 +374,7 @@
             placeholder="Телефон"
           />
         </div>
-        <input class="modal__form-btn" type="submit"></input>
+        <button class="modal__form-btn" type="submit"></button>
         <div class="modal__form-info">
           <input class="modal__form-checkbox" type="checkbox" />
           <p>
