--- a/index.html
+++ b/index.html
@@ -337,13 +337,7 @@
       </div>
     </section>
     <div class="modal">
-      <form class="modal__form">
-        <!-- Hidden Required Fields -->
-        <input type="hidden" name="project_name" value="E-COMMERCE" />
-        <input type="hidden" name="admin_email" value="bob1_k@mail.ru" />
-        <input type="hidden" name="form_subject" value="Form Modal" />
-        <!-- END Hidden Required Fields -->
-
+      <form class="modal__form" action="mail.php" method="post">
         <span class="modal__form-closet">x</span>
         <p class="modal__form-title"></p>
         <div class="modal__form-input-box">
