--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       <form class="modal__form">
         <!-- Hidden Required Fields -->
         <input type="hidden" name="project_name" value="E-COMMERCE" />
-        <input type="hidden" name="admin_email" value="bob1_k@mail.ru" />
+        <input type="hidden" name="admin_email" value="aek92602@xcoxc.com" />
         <input type="hidden" name="form_subject" value="Form Modal" />
         <!-- END Hidden Required Fields -->
 
@@ -377,7 +377,7 @@
         </div>
         <button class="modal__form-btn" type="submit"></button>
         <div class="modal__form-info">
-          <input class="modal__form-checkbox" type="checkbox" required/>
+          <input class="modal__form-checkbox" type="checkbox" required />
           <p>
             Я согласен на обработку моих персональных данных в соответствии с
             Условиями и Договором оферты
