--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       <form class="modal__form">
         <!-- Hidden Required Fields -->
         <input type="hidden" name="project_name" value="E-COMMERCE" />
-        <input type="hidden" name="admin_email" value="aek92602@xcoxc.com" />
+        <input type="hidden" name="admin_email" value="bob1_k@mail.ru" />
         <input type="hidden" name="form_subject" value="Form Modal" />
         <!-- END Hidden Required Fields -->
 
@@ -398,6 +398,6 @@
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="app/js/main.js" type="module"></script>
+    <script src="app/js/main.min.js" type="module"></script>
   </body>
 </html>
